@@ -3,7 +3,10 @@ bobcat (1.14.2)
   * Added (still) missing headers to glob.ih, log.ih and tablesupport.ih
     required for proper compilation with g++ 4.3
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 11 Apr 2007 11:51:29 +0200
+  * The ServerSocket is created with the option SO_REUSEADDR, allowing servers
+    to be restarted immediately following a shutdown of the server.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 13 Apr 2007 12:05:11 +0200
 
 bobcat (1.14.1)
 
